@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Don't display an evil error message when trying to reset a map with a player on.
+ server/c_wiz.c
+Nicolas Weeger 2007-08-20
+
 Fix item update on ground. Factorize code. Add increase_ob_nr() function.
  include/libproto.h
  common/object.c
